Fixed bug with the name of the actionbar on the login flow; Fixed home navigation;

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -33,6 +33,12 @@
         app:destination="@id/settingsFragment"
         app:popUpTo="@id/homeFragment" />
 
+    <action
+        android:id="@+id/action_to_home"
+        app:destination="@id/homeFragment"
+        app:popUpTo="@id/homeFragment"
+        app:launchSingleTop="true"/>
+
 
 
 
