--- a/app/src/main/res/layout/fragment_spese_storico.xml
+++ b/app/src/main/res/layout/fragment_spese_storico.xml
@@ -6,9 +6,9 @@
     tools:context=".fragments.SpeseStorico">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <ListView
+        android:id="@+id/listaStoricoSpese"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Storico" />
+        android:layout_height="match_parent"/>
 
 </FrameLayout>
