--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,7 +28,7 @@
             android:name="androidx.navigation.fragment.NavHostFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:layout="@layout/fragment_main"
+            tools:layout="@layout/fragment_login"
             tools:layout_editor_absoluteX="0dp"
             tools:layout_editor_absoluteY="0dp"
 
