--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -25,7 +25,13 @@
         <item name="android:windowTitleBackgroundStyle">@android:color/white</item>
         <item name="android:textColorPrimary">@color/white</item>
 
-        <!-- Customize your theme here. -->
+        <!-- Splash screen options -->
+        <item name="android:windowSplashScreenBackground" tools:ignore="NewApi">@color/background_dark</item>
+        <item name="android:windowSplashScreenAnimatedIcon" tools:ignore="NewApi">@drawable/home</item>
+        <item name="android:windowSplashScreenBehavior" tools:ignore="NewApi">icon_preferred</item>
+        <item name="android:windowSplashScreenAnimationDuration" tools:ignore="NewApi">1000</item>
+
+
     </style>
 
     <style name="Theme.Roommates.Asd">
