--- a/app/src/main/res/layout/spese_storico.xml
+++ b/app/src/main/res/layout/spese_storico.xml
@@ -2,10 +2,8 @@
 <FrameLayout
 xmlns:android="http://schemas.android.com/apk/res/android"
 android:layout_width="match_parent"
-android:layout_height="150dp"
-android:background="@drawable/border"
-android:layout_marginVertical="5dp"
-android:layout_marginHorizontal="18dp">
+android:layout_height="wrap_content"
+>
 
 <!-- Customize the content of each item here -->
 <!-- Example: TextView to display the item's text -->
@@ -13,35 +11,36 @@ android:layout_marginHorizontal="18dp">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:background="@drawable/border"
+        android:orientation="vertical"
+        android:padding="10dp"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginVertical="10dp">
 
         <TextView
             android:id="@+id/nomeSpesa"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAppearance="@android:style/TextAppearance.Medium"
-            android:text="Spesa"
-            android:textColor="@color/white"/>
+            android:textColor="@color/white"
+            android:layout_marginBottom="10dp"/>
         <TextView
             android:id="@+id/dataSpesa"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="25/05/2023"/>
+            />
         <TextView
             android:id="@+id/valoreSpesa"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="50€"/>
+            android:layout_height="wrap_content" />
         <TextView
             android:id="@+id/pagatoDa"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Pagato da Giovanni"/>
+            android:layout_height="wrap_content" />
         <TextView
             android:id="@+id/divisoTra"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Diviso tra tutti"/>
+            android:layout_height="wrap_content" />
 
     </LinearLayout>
 </FrameLayout>
