Fixed bug on shopping item removal and with the divider's color

--- a/app/src/main/res/layout/fragment_shopping_list.xml
+++ b/app/src/main/res/layout/fragment_shopping_list.xml
@@ -54,7 +54,8 @@
         <ListView
             android:id="@+id/shoppingListView"
             android:layout_width="match_parent"
-            android:layout_height="386dp">
+            android:layout_height="386dp"
+            android:divider="@color/fui_transparent">
 
         </ListView>
 
