--- a/app/src/main/res/layout/fragment_spese_situazione.xml
+++ b/app/src/main/res/layout/fragment_spese_situazione.xml
@@ -6,25 +6,52 @@
     tools:context=".fragments.SpeseSituazione">
 
     <LinearLayout
-        android:id="@+id/situazioni"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="10dp">
         <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Situazione"/>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/white"
+                android:layout_gravity="center"
+                android:layout_marginHorizontal="5dp"/>
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/situazioni"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
         </LinearLayout>
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@drawable/border"/>
         <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Storico"/>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/white"
+                android:layout_gravity="center"
+                android:layout_marginHorizontal="5dp"/>
+        </LinearLayout>
+        <ListView
             android:id="@+id/storicoSituazioni"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-        </LinearLayout>
+        </ListView>
     </LinearLayout>
 
 </FrameLayout>
