--- a/app/src/main/res/layout/generic_item.xml
+++ b/app/src/main/res/layout/generic_item.xml
@@ -2,7 +2,7 @@
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="150dp">
 
     <!-- Customize the content of each item here -->
     <!-- Example: TextView to display the item's text -->
@@ -12,15 +12,7 @@
         android:background="@drawable/border"
         android:orientation="horizontal"
         android:padding="10dp"
-        android:layout_marginHorizontal="20dp"
         android:layout_marginVertical="10dp">
-
-        <ImageView
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="match_parent"
-            android:src="@drawable/user"
-            />
 
         <LinearLayout
             android:layout_width="0dp"
@@ -29,28 +21,27 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/titoloSituazione"
+                android:id="@+id/titoloGenericItem"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
+                android:layout_height="wrap_content"
                 android:textAppearance="@android:style/TextAppearance.Medium"
                 android:text="Marco"
                 android:textColor="@color/white"/>
             <TextView
-                android:id="@+id/descrizioneSituazione"
+                android:id="@+id/descrizioneGenericItem"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
+                android:layout_height="wrap_content"
                 android:text="Devi 5€ a Marco"
                 android:textColor="@color/white"/>
 
         </LinearLayout>
 
         <Button
-            android:id="@+id/pagaSituazione"
+            android:id="@+id/buttonGenericItem"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="paga"
+            android:visibility="invisible"
             android:layout_gravity="center"/>
 
 
