--- a/app/src/main/res/layout/fragment_sondaggi.xml
+++ b/app/src/main/res/layout/fragment_sondaggi.xml
@@ -10,11 +10,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/surveysRecyclerView"
-            android:layout_width="match_parent"
+        <ListView
             android:layout_height="match_parent"
-            android:padding="16dp" />
+            android:layout_width="match_parent"
+            android:id="@+id/sondaggiListView"></ListView>
 
         <Button
             android:layout_width="wrap_content"
