--- a/app/src/main/res/layout/survey_item.xml
+++ b/app/src/main/res/layout/survey_item.xml
@@ -11,13 +11,24 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
-        <TextView
-            android:id="@+id/domanda"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="8dp"
-            android:text="Domanda del sondaggio"
-            />
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/domanda"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="8dp"
+                android:text="Domanda del sondaggio"
+                android:layout_weight="9"
+                />
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/turni"/>
+        </LinearLayout>
+
 
         <RadioGroup
             android:id="@+id/optionsRadioGroup"
