Fixed navigation stuff

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -16,6 +16,37 @@
     <action android:id="@+id/action_to_turnipulizia"
         app:destination="@id/turniPuliziaFragment"/>
 
+    <action
+        android:id="@+id/action_to_spesa"
+        app:destination="@id/shoppingListFragment"
+        app:popUpTo="@id/homeFragment" />
+
+    <action
+        android:id="@+id/action_to_rubrica"
+        app:destination="@id/contactFragment"
+        app:popUpTo="@id/homeFragment" />
+
+    <action
+        android:id="@+id/action_to_note"
+        app:destination="@id/noteFragment"
+        app:popUpTo="@id/homeFragment" />
+
+    <action
+        android:id="@+id/action_to_impostazioni"
+        app:destination="@id/settingsFragment"
+        app:popUpTo="@id/homeFragment" />
+
+    <action
+        android:id="@+id/action_to_sondaggi"
+        app:destination="@id/sondaggiFragment"
+        app:popUpTo="@id/homeFragment" />
+
+    <action
+        android:id="@+id/action_to_home"
+        app:destination="@id/homeFragment"
+        app:popUpTo="@id/homeFragment"
+        app:launchSingleTop="true"/>
+
 
     <fragment
         android:id="@+id/loginFragment"
