--- a/app/src/main/res/layout/fragment_sondaggi.xml
+++ b/app/src/main/res/layout/fragment_sondaggi.xml
@@ -13,16 +13,28 @@
         <ListView
             android:layout_height="match_parent"
             android:layout_width="match_parent"
-            android:id="@+id/sondaggiListView"></ListView>
+            android:id="@+id/sondaggiListView">
+
+        </ListView>
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/button_new_sondaggio"
-            android:text="+"
+            android:text="@string/add"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_margin="10dp"/>
+
+        <ProgressBar
+            android:id="@+id/surveyProgressbar"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="93dp"
+            android:layout_height="86dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/sondaggiListView" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
