--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -172,7 +172,11 @@
         android:id="@+id/turniPuliziaFragment"
         android:name="it.unitn.disi.fumiprovv.roommates.fragments.TurniPuliziaFragment"
         android:label="fragment_turnipulizia"
-        tools:layout="@layout/fragment_turnipulizia" />
+        tools:layout="@layout/fragment_turnipulizia" >
+        <action
+            android:id="@+id/action_turniPuliziaFragment_to_nuovoTurnoPulizia"
+            app:destination="@id/nuovoTurnoPulizia" />
+    </fragment>
     <fragment
         android:id="@+id/nuovoEvento"
         android:name="it.unitn.disi.fumiprovv.roommates.fragments.NuovoEvento"
@@ -229,5 +233,10 @@
         android:name="it.unitn.disi.fumiprovv.roommates.fragments.NuovoSondaggio"
         android:label="fragment_nuovo_sondaggio"
         tools:layout="@layout/fragment_nuovo_sondaggio" />
+    <fragment
+        android:id="@+id/nuovoTurnoPulizia"
+        android:name="it.unitn.disi.fumiprovv.roommates.fragments.NuovoTurnoPulizia"
+        android:label="fragment_nuovo_turno_pulizia"
+        tools:layout="@layout/fragment_nuovo_turno_pulizia" />
 
 </navigation>
