--- a/app/src/main/res/layout/fragment_turnipulizia.xml
+++ b/app/src/main/res/layout/fragment_turnipulizia.xml
@@ -19,12 +19,13 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:padding="10dp">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Questa settimana"/>
+                    android:text="@string/this_week"/>
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="2dp"
@@ -42,12 +43,13 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:padding="10dp">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Prossima settimana"/>
+                    android:text="@string/next_week"/>
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="2dp"
