--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -25,6 +25,8 @@
         app:destination="@id/tabsFragment"/>
     <action android:id="@+id/action_to_impostazioni"
         app:destination="@id/settingsFragment"/>
+    <action android:id="@+id/action_to_turni2"
+        app:destination="@id/turniProvaFragment"/>
 
 
     <fragment
@@ -238,5 +240,21 @@
         android:name="it.unitn.disi.fumiprovv.roommates.fragments.NuovoTurnoPulizia"
         android:label="fragment_nuovo_turno_pulizia"
         tools:layout="@layout/fragment_nuovo_turno_pulizia" />
+    <fragment
+        android:id="@+id/turniProvaFragment"
+        android:name="it.unitn.disi.fumiprovv.roommates.fragments.TurniProvaFragment"
+        android:label="fragment_turni_prova"
+        tools:layout="@layout/fragment_turni_prova" >
+        <action
+            android:id="@+id/action_turniProvaFragment_to_nuovoTurnoPulizia"
+            app:destination="@id/nuovoTurnoPulizia" />
+        <action
+            android:id="@+id/action_turniProvaFragment_to_newTurnoProva"
+            app:destination="@id/newTurnoProva" />
+    </fragment>
+    <fragment
+        android:id="@+id/newTurnoProva"
+        android:name="it.unitn.disi.fumiprovv.roommates.fragments.NewTurnoProva"
+        android:label="NewTurnoProva" />
 
 </navigation>
