--- a/app/src/main/res/layout/fragment_spese_situazione.xml
+++ b/app/src/main/res/layout/fragment_spese_situazione.xml
@@ -1,57 +1,88 @@
-<?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.SpeseSituazione">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
+    tools:context=".fragments.SpeseSituazioneFragment"
+    android:id="@+id/fragment_spese_situazione_prova">
 
+    <!-- Top Part -->
     <LinearLayout
+        android:id="@+id/topPart"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:padding="10dp">
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:orientation="vertical">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            app:layout_constraintTop_toTopOf="parent"
+            android:padding="10dp"
+            >
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Situazione"/>
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/white"
                 android:layout_gravity="center"
-                android:layout_marginHorizontal="5dp"/>
-        </LinearLayout>
-        <LinearLayout
-            android:id="@+id/situazioni"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <TextView
+                android:text="@string/situazioneText"/>
+            <View
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Storico"/>
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
+                android:layout_height="2dp"
                 android:background="@color/white"
                 android:layout_gravity="center"
-                android:layout_marginHorizontal="5dp"/>
+                android:layout_margin="10dp"/>
+
         </LinearLayout>
+
         <ListView
-            android:id="@+id/storicoSituazioni"
+            android:id="@+id/situazioniListView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
-        </ListView>
+            android:divider="@color/fui_transparent"
+            android:padding="10dp"/>
+
     </LinearLayout>
 
-</FrameLayout>
+    <!-- Bottom Part -->
+    <LinearLayout
+        android:id="@+id/bottomPart"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintTop_toTopOf="parent"
+            android:padding="10dp"
+            >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="@string/storicoSituazioneText"/>
+            <View
+                android:layout_width="wrap_content"
+                android:layout_height="2dp"
+                android:background="@color/white"
+                android:layout_gravity="center"
+                android:layout_margin="10dp"/>
+
+        </LinearLayout>
+
+        <ListView
+            android:id="@+id/situazioniStoricoListView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:divider="@color/fui_transparent"
+            android:padding="10dp"/>
+
+    </LinearLayout>
+
+</LinearLayout>
