Fixed color on light mode.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
 
     <color name="background_dark">#212121</color>
     <color name="primaryTextColor">@color/white</color>
+    <color name="darker">#303030</color>
 </resources>
