--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -7,6 +7,5 @@
     android:layout_width="match_parent"
     android:fitsSystemWindows="true"
     android:minHeight="?attr/actionBarSize"
-    app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-    android:background="@color/purple_500">
+    android:theme="@style/Theme.Roommates.AppBarOverlay">
 </androidx.appcompat.widget.Toolbar>
