--- a/app/src/main/res/layout/fragment_spese_situazione.xml
+++ b/app/src/main/res/layout/fragment_spese_situazione.xml
@@ -85,4 +85,14 @@
 
     </LinearLayout>
 
+    <ProgressBar
+        android:id="@+id/situazioneProgressbar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </LinearLayout>
