--- a/app/src/main/res/layout/fragment_spese_storico.xml
+++ b/app/src/main/res/layout/fragment_spese_storico.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragments.SpeseStorico">
 
     <!-- TODO: Update blank fragment layout -->
@@ -10,5 +11,15 @@
         android:id="@+id/listaStoricoSpese"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
+
+    <!--<ProgressBar
+        android:id="@+id/contactProgressbar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />-->
 
 </FrameLayout>
